--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -758,8 +758,14 @@ body:not(.post-template) .post-title {
     line-height: 1.7em;
 }
 
+.post-excerpt img {
+    max-width: 100%;
+}
+
 .read-more {
-    text-decoration: none;
+    /*text-decoration: none;*/
+    font-size: 0.8em;
+    
 }
 
 .post-meta {
